# SmartCalc_v2.0

./: Doxyfile  Makefile  README.md  description.h  s21_controller.cc  s21_controller.h  s21_credit_model.cc  s21_credit_model.h  s21_deposit_model.cc  s21_deposit_model.h  s21_model.cc  s21_model.h
SmartCalc_2/: CMakeLists.txt  main.cc  s21_creditview.cc  s21_creditview.h  s21_creditview.ui  s21_depositview.cc  s21_depositview.h  s21_depositview.ui  s21_view.cc  s21_view.h  s21_view.ui
tests/: smartcalc_v2.0_test.cc  smartcalc_v2.0_test.h
